automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -746,8 +746,8 @@
     "    output = []\n",
     "    for term in list_of_terms:\n",
     "        c = term[0]\n",
-    "        x = term[1]\n",
-    "        y = term[2]\n",
+    "        x_exp = term[1]\n",
+    "        y_exp = term[2]\n",
     "        output = c*x**x_exponent*y_value**y_exponent\n",
     "        output.append(term_output) "
    ]
