--- a/index.ipynb
+++ b/index.ipynb
@@ -748,7 +748,7 @@
     "        c = term[0]\n",
     "        x_exp = term[1]\n",
     "        y_exp = term[2]\n",
-    "        output = c*x**x_exponent*y_value**y_exponent\n",
+    "        output = c*x_value**x_exp*y_value**y_exp\n",
     "        output.append(term_output) "
    ]
   },
