automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -863,7 +863,9 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    c="
+    "    c=term[0]\n",
+    "    exp=term[1]-1\n",
+    "    return "
    ]
   },
   {
