--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -865,7 +865,7 @@
     "def term_df_dx(term):\n",
     "    c=term[0]\n",
     "    exp=term[1]-1\n",
-    "    return "
+    "    return (cc,)"
    ]
   },
   {
