automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -981,7 +981,7 @@
     "def term_df_dy(term):\n",
     "    c=term[0]*term[2]\n",
     "    exp=term[2]-1\n",
-    "    return (x)"
+    "    return (c,exp,)"
    ]
   },
   {
