automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -972,21 +972,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
     "    c=term[0]*term[2]\n",
     "    exp=term[2]-1\n",
-    "    return (c,exp,)"
+    "    return (c,term[1],exp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +993,7 @@
        "(4, 2, 1)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
