automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1120,7 +1120,8 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    pass"
+    "     derivative_terms =map(lambda function_term: term_df_dx(function_term),list_of_terms)\n",
+    "    return list(filter(lambda derivative_term: derivative_term[0] > 0, derivative_terms))\n"
    ]
   },
   {
